atualizando o código e corrigindo alguns bugs